tests/require_annotations.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-annotation
spec:
  validationActions:
    - Deny

  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

  validations:
    - expression: >-
        object.metadata.?annotations["corp.org/department"].orValue("") != ""
      message: "The annotation `corp.org/department` is required."
