tests/require_annotations_new.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-annotations
spec:
  validationActions:
    - Deny

  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

  validations:
    - expression: >-
        has(object.metadata.annotations) &&
        has(object.metadata.annotations["corp.org/department"]) &&
        object.metadata.annotations["corp.org/department"] != ""
      message: "The annotation `corp.org/department` is required."
