tests/kyverno-test-validating.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require_annotations_test_new
policies:
  - ./require_annotations_new.yaml
resources:
  - ./pod_with_annotation.yaml
  - ./pod_without_annotation.yaml
results:
  - policy: require-annotations
    rule: check-for-annotation
    resources: 
      - web-app-with-annotation
    kind: Pod
    result: pass
  - policy: require-annotations
    rule: check-for-annotation
    resources: 
      - web-app-without-annotation
    kind: Pod
    result: fail
